gcc/testsuite/rust/rustc/ui/parser/attribute/attr_dg.rs
#![feature(lang_items)]

fn main() {}

#![lang = "foo"] // { dg-error "" "" { target *-*-* } }
fn foo() {}

